--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -30,6 +30,11 @@
     "@types/node": "^15.3.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.0.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
