add Button Component

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
     ],
     "rules": {
         "@typescript-eslint/explicit-module-boundary-types": 0,
-        // "react/prop-types": 0,
+        "react/prop-types": 0,
         // "@typescript-eslint/no-empty-function": 0,
         // "react/display-name": 0
     }
