--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "dev": "next dev"
   },
   "peerDependencies": {
-    "react": ">=16"
+    "react": ">=16",
+    "tailwindcss": "^2.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/ui": "^0.7.2",
     "@types/node": "^15.3.0",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
+    "@types/react": "^16.9.56",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.0.5",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "tailwindcss": "^1.9.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^2.1.2",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
