--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "baseUrl": "./",
     "paths": {
-      "@headlessui/react": ["src"],
+      "@collectedui/react": ["src"],
       "*": ["src/*", "node_modules/*"]
     },
     "jsx": "preserve",
